# fctrl

./: .dockerignore  .env  .gitignore  Cargo.toml  LICENSE  README.md  agent.Dockerfile  build.rs  docker-compose.ci.yml  docker-compose.local.yml  docker-compose.reverse-proxy.yml  docker-compose.yml  local_build.sh  local_down.sh  local_up.sh  mgmt-server.Dockerfile  package-lock.json  package.json
.github/workflows/: container-push.yml
openapi/: factorio-mod-portal.yaml  mgmt-server-rest.yaml
src/: consts.rs  error.rs  factorio.rs  lib.rs  main.rs  schema.rs  server.rs  util.rs
src/agent/: consts.rs  error.rs  factorio.rs  main.rs
src/agent/server/: builder.rs  mod.rs  mods.rs  proc.rs  rcon.rs  settings.rs
src/agent/util/: downloader.rs  mod.rs  saves.rs
src/mgmt-server/: DESIGN.md  auth.rs  catchers.rs  clients.rs  consts.rs  db.rs  discord.rs  error.rs  guards.rs  link_download.rs  main.rs  metrics.rs  rpc.rs  todo.rs  ws.rs
src/mgmt-server/events/: broker.rs  mod.rs
src/mgmt-server/routes/: auth.rs  buildinfo.rs  download.rs  logs.rs  metrics.rs  mod.rs  options.rs  proxy.rs  server.rs  system.rs
src/mgmt_server/: DESIGN.md  main.rs
src/server/: builder.rs  mod.rs  proc.rs  settings.rs
src/util/: downloader.rs  mod.rs  saves.rs  testing.rs
src/ws-client/: main.rs
src/ws_client/: main.rs
tests/: agent_integration_tests.rs
web/: .eslintrc.json  .gitignore  NOTES.md  README.md  angular.json  openapi-factorio-mod-portal.json  openapi-mgmt-server-rest.json  package-lock.json  package.json  tsconfig.json
web/src/: index.html
web/src/app/: app-routing.module.ts  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts  operation.service.ts  schemas.ts
web/src/app/auth/: auth-discord.service.spec.ts  auth-discord.service.ts  auth-info.service.spec.ts  auth-info.service.ts  auth.guard.ts  bearer-auth-interceptor.ts
web/src/app/auth/login/: login.component.html  login.component.ts
web/src/app/auth/logout/: logout.component.html  logout.component.ts
web/src/app/auth/oauth-redirect/: oauth-redirect.component.html  oauth-redirect.component.spec.ts  oauth-redirect.component.ts
web/src/app/dashboard/: dashboard.component.html  dashboard.component.spec.ts  dashboard.component.ts  status-control.ts
web/src/app/dashboard/status/: status.component.html  status.component.sass  status.component.ts
web/src/app/dashboard2/: dashboard2.component.html  dashboard2.component.sass  dashboard2.component.spec.ts  dashboard2.component.ts
web/src/app/editable-list/: editable-list.component.html  editable-list.component.spec.ts  editable-list.component.ts
web/src/app/logs/: logs.component.html  logs.component.spec.ts  logs.component.ts
web/src/app/logs/chat/: chat.component.html  chat.component.spec.ts  chat.component.ts
web/src/app/logs/system/: system.component.html  system.component.sass  system.component.spec.ts  system.component.ts
web/src/app/mods/: mods.component.html  mods.component.spec.ts  mods.component.ts
web/src/app/mods/dlc-list/: dlc-info.ts  dlc-list.component.html  dlc-list.component.spec.ts  dlc-list.component.ts
web/src/app/mods/mod-list/: mod-info.ts  mod-list.component.html  mod-list.component.spec.ts  mod-list.component.ts
web/src/app/mods/mod-list/mod-object/: mod-object.component.html  mod-object.component.spec.ts  mod-object.component.ts
web/src/app/mods/mod-settings/: mod-settings.component.html  mod-settings.component.spec.ts  mod-settings.component.ts
web/src/app/notifications/: notifications.component.html  notifications.component.spec.ts  notifications.component.ts
web/src/app/oauth-redirect/: oauth-redirect.component.spec.ts  oauth-redirect.component.ts
web/src/app/page-not-found/: page-not-found.component.ts
web/src/app/server-config/: server-config.component.html  server-config.component.spec.ts  server-config.component.ts
web/src/app/server-config/admin-list/: admin-list.component.html  admin-list.component.spec.ts  admin-list.component.ts
web/src/app/server-config/ban-list/: ban-list.component.html  ban-list.component.spec.ts  ban-list.component.ts
web/src/app/server-config/secrets/: secrets.component.html  secrets.component.spec.ts  secrets.component.ts
web/src/app/server-config/server-settings/: server-settings.component.html  server-settings.component.spec.ts  server-settings.component.ts
web/src/app/server-config/white-list/: white-list.component.html  white-list.component.spec.ts  white-list.component.ts
web/src/environments/: environment.prod.ts  environment.ts
