[package]
name = "fctrl"
version = "0.1.0"
authors = [ "circlesabound <circlesabound@users.noreply.github.com>" ]
edition = "2018"
license = "Apache-2.0"
publish = false

[dependencies]
base64 = "0.22"
bincode = "1.3"
bytes = "1.0"
chrono = { version = "0.4.37", features = [ "serde" ] }
derive_more = "0.99"
env_logger = "0.11.3"
factorio-file-parser = { git = "https://github.com/circlesabound/factorio-file-parser", rev = "172a700" }
futures = "0.3"
futures-util = "0.3"
http = "1.0"
lazy_static = "1.4"
log = "0.4"
nix = { version = "0.28", features = [ "process", "signal" ] }
rand = "0.8"
rcon = { version = "0.6", features = [ "rt-tokio" ] }
regex = "1.4"
reqwest = { version = "0.12.1", features = [ "json" ] }
rocksdb = "0.22"
rocket = { version = "0.5", features = [ "json" ] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
serenity = { version = "0.12", default-features = false, features = [ "client", "gateway", "rustls_backend", "model", "cache" ] }
stream-cancel = "0.8"
strum = "0.26.2"
strum_macros = "0.26.2"
tar = "0.4"
tokio = { version = "1.5", features = [ "full" ] }
tokio-stream = { version = "0.1", features = [ "sync" ] }
tokio-tungstenite = "0.21"
tokio-util = "0.7"
toml = "0.8.8"
url = "2"
urlencoding = "2.1.0"
uuid = { version = "1.6.1", features = [ "serde", "v4" ] }
xz2 = "0.1"

[build-dependencies]
vergen = { version = "8.3", features = [ "build", "git", "gitcl" ] }

[dev-dependencies]
serial_test = "3.0.0"

[target.'cfg(not(windows))'.dependencies]
openssl-sys = { version = "0.9", features = [ "vendored" ] }

[[bin]]
name = "agent"
path = "src/agent/main.rs"

[[bin]]
name = "mgmt-server"
path = "src/mgmt-server/main.rs"

[[bin]]
name = "ws-client"
path = "src/ws-client/main.rs"
