[package]
name = "fctrl"
version = "0.1.0"
authors = [ "circlesabound <circlesabound@users.noreply.github.com>" ]
edition = "2018"
license = "Apache-2.0"
publish = false

[dependencies]
async-stream = "0.3.6"
async_zip = { version = "0.0.17", features = [ "full" ] }
base64 = "0.22.1"
bincode = "1.3"
bytes = "1.8.0"
chrono = { version = "0.4.39", features = [ "serde" ] }
derive_more = { version = "1.0", features = [ "full" ] }
env_logger = "0.11.6"
factorio-file-parser = { git = "https://github.com/circlesabound/factorio-file-parser", rev = "6a4c062" }
futures = "0.3.31"
futures-util = "0.3.31"
http = "1.2.0"
lazy_static = "1.5.0"
log = "0.4.22"
nix = { version = "0.29", features = [ "process", "signal" ] }
rand = "0.8.5"
rcon = { version = "0.6", features = [ "rt-tokio" ] }
regex = "1.11.1"
reqwest = { version = "0.12.12", features = [ "json" ] }
rocksdb = "0.23"
rocket = { version = "0.5.1", features = [ "json" ] }
serde = { version = "1.0.217", features = [ "derive" ] }
serde_json = "1.0.134"
serenity = { version = "0.12.4", default-features = false, features = [ "client", "gateway", "rustls_backend", "model", "cache" ] }
stream-cancel = "0.8.2"
strum = "0.26.3"
strum_macros = "0.26.4"
sysinfo = "0.33.1"
tar = "0.4.43"
tokio = { version = "1.42.0", features = [ "full" ] }
tokio-stream = { version = "0.1.17", features = [ "sync" ] }
tokio-tungstenite = { version = "0.26.1", features = [ "native-tls", "url" ] }
tokio-util = "0.7.13"
toml = "0.8.19"
unicode-xid = "0.2.6"
url = "2.5.4"
urlencoding = "2.1.3"
uuid = { version = "1.11.0", features = [ "serde", "v4" ] }
xz2 = "0.1.7"

[build-dependencies]
vergen-gitcl = { version = "1.0.2", features = [ "build" ] }

[dev-dependencies]
serial_test = "3.2.0"

[target.'cfg(not(windows))'.dependencies]
openssl-sys = { version = "0.9.104", features = [ "vendored" ] }

[[bin]]
name = "agent"
path = "src/agent/main.rs"

[[bin]]
name = "mgmt-server"
path = "src/mgmt-server/main.rs"

[[bin]]
name = "ws-client"
path = "src/ws-client/main.rs"
